--- a/index.html
+++ b/index.html
@@ -3,20 +3,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>我的</title>
+  <title></title>
   <meta charset="utf-8">
   <style>
     
     body {
       font-family: Arial, sans-serif;
-    background-green: #f4f4f4;
-    color: #333;
+    background-color: #0000fff;
     margin: 30;
     padding: 5;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 60vh;
+    height: 70vh;
     align-items: center;
     flex-direction: column;
     justify-content: center;
@@ -41,6 +40,7 @@
     <h1>高黎明</h1>
     <p>黎你很近</p >
     <p>我的第一个网页。</p >
+    
     <p>不爱上班的小懒子！</p>
     <br>
     <a
